# dspy-multi-agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  start_api.py
docs/: API Testing Examples.md  comprehensive_report_guide.md  model_comparison.md  test_organization.md  visualization_guide.md
src/: main.py
src/agents/: coordinator.py  metrics_coordinator.py  researcher.py  wikipedia_researcher.py  writer.py
src/api/: main.py  models.py
src/signatures/: agent_signatures.py
src/utils/: config.py  error_handling.py  model_configs.py  output_comparison.py  performance_metrics.py  report_generator.py
test/: demo_client.py
tests/: __init__.py  conftest.py  run_tests.py
tests/integration/: test_model_comparison.py
tests/integration/results/: model_comparison_20250803_135557.json  model_comparison_20250803_140304.json  model_comparison_20250803_142211.json  model_comparison_20250803_195239.json  model_series_20250803_133845.json  model_series_20250803_134102.json
tests/models_batch_run/: model_comparison_config.example.json  model_comparison_config.json  run_model_comparison_with_report.py
tests/performance/: batch_test_models.py  compare_models.py  minimal_test.py  quick_test_demo.py  test_current_models.py  test_model_series.py
tests/tools/: show.json  visualize_comparison_results.py  visualize_results.py
tests/unit/: test_config.py  test_coordinator.py  test_research_agent.py  test_web_search_tool.py  test_writer_agent.py
