[project]
name = "dspy-multi-agent"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "dspy>=3.0.0b3",
    "fastapi>=0.115.13",
    "httpx>=0.28.1",
    "openai>=1.90.0",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Ignore missing imports for external libraries without stubs
[[tool.mypy.overrides]]
module = [
    "dspy.*",
    "httpx.*",
    "pydantic.*",
    "fastapi.*",
    "signatures.*",
    "agents.*", 
    "utils.*",
]
ignore_missing_imports = true